# lgate

./: .gitignore  INSTALL  Makefile  README  badaddr.tpl  confer.lst  configure  configure.in  fido2rel.pl  fidogate.txt  gate.conf  held.tpl  history.txt  lgate.faq  minstall.in  reject.tpl  rel2fido.pl  route.cfg  techdoc.txt  todo.txt
attach/: Makefile.in  attach.c  attuucp.doc  checktmp.c  config.c  cunb64.h  do_b64.c  do_unb64.c  do_uude.c  do_uuen.c  from.c  gate.h  hgets.c  makefile.bc  makefile.emx  makefile.tc  makefile.wat  misc.c  uudecode.c  uuencode.c
fido2rel/: Makefile.in  arbmath.c  base64.c  config.c  fido2rel.c  gate.h  genrej.c  getfaddr.c  import.c  lib.h  makeaddr.c  makefile.bc  makefile.emx  makefile.perlos2  makefile.tc  makefile.wat  misc.c  one_mess.c  rsend.c  virtfile.c
fidolib/: Makefile.in  binksem.c  bsyname.c  chkmask.c  comwrite.c  copyfile.c  crc.c  daymon.c  dayweek.c  dirent.c  dirent.h  dvdelay.asm  fdsem.c  fidolib.h  getfaddr.c  getfmask.c  getmsgid.c  lbsosem.c  makeall.bat  makefile.bc  makefile.emx  makefile.tc  makefile.wat  maketc.bat  montable.c  movefile.c  myopen.c  rmove.c  scanbnk.c  touch.c  weekday.c
forward/: Makefile.in  forward.c  forward.cfg  makefile.bc  makefile.emx  makefile.tc  makefile.wat
inf/: Makefile  faq.ipf  gate.cfg  gate.cfg.eng  hist2ipf.cmd  lgate.ipf  register.ipf  sendmail.howto  sendmail.ipf  start.doc  start.ipf  techdoc.ipf  todo2ipf.cmd
lib/: Makefile.in  charsets.c  cmpaddr.c  cp1125.h  cp1251.h  cp866.h  debug.c  ea.c  exec.h  execl.lib  gettz.c  koi8-r.h  koi8-u.h  libgate.h  logwrite.c  makefile.bc  makefile.emx  makefile.tc  makefile.wat  memmgr.c  myfopen.c  os2flock.c  regex.c  regex.h  run.c  run2.c  rwmsghdr.c  savein.c  swap.c  sysexit.c  sysfuncs.c  template.c  utime.h
rel2fido/: Makefile.in  arbmath.c  config.c  cunb64.h  from.c  gate.h  getput.c  getspool.c  import.c  import.h  lib.h  makefile.bc  makefile.emx  makefile.perlos2  makefile.tc  makefile.wat  misc.c  parseadr.c  raw.h  readhdr.c  rel2fido.c  transadr.c  unmime.c
swap/: checkpat.asm  checkpat.h  checkpct.asm  exec.c  exec.h  extest.c  extest.prj  makel  makes  spawn.asm  spawn.bug  turboc.cfg
